Components: committed forgotten Hungarian translations
git-svn-id: trunk@46439 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2051,6 +2051,7 @@ components/lazdebuggergdbmi/gdbmistringconstants.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/gdbtypeinfo.pp svneol=native#text/pascal
 components/lazdebuggergdbmi/ideminilibc.pas svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.de.po svneol=native#text/plain
+components/lazdebuggergdbmi/languages/gdbmiserverdebugger.hu.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.ru.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmistringconstants.es.po svneol=native#text/plain
@@ -2622,8 +2623,10 @@ components/lazsvnpkg/svnstatusform.pas svneol=native#text/plain
 components/lazsvnpkg/svnupdateform.lfm svneol=native#text/plain
 components/lazsvnpkg/svnupdateform.pas svneol=native#text/plain
 components/lazthread/languages/reglazthread.de.po svneol=native#text/plain
+components/lazthread/languages/reglazthread.hu.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.ru.po svneol=native#text/plain
+components/lazthread/languages/threadoptionsdialog.hu.po svneol=native#text/plain
 components/lazthread/languages/threadoptionsdialog.po svneol=native#text/plain
 components/lazthread/languages/threadoptionsdialog.ru.po svneol=native#text/plain
 components/lazthread/lazthread.lpk svneol=native#text/plain
