anchordocking: examples for bug #20845
git-svn-id: trunk@46458 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -605,6 +605,8 @@ components/anchordocking/languages/anchordockstr.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.pt_BR.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.ru.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.uk.po svneol=native#text/plain
+components/anchordocking/minide/bug20845_1.xml svneol=native#text/plain
+components/anchordocking/minide/bug20845_2.xml svneol=native#text/plain
 components/anchordocking/minide/miniide1.lpi svneol=native#text/plain
 components/anchordocking/minide/miniide1.lpr svneol=native#text/plain
 components/anchordocking/minide/simplefrm.lfm svneol=native#text/plain
