--- a/.gitattributes
+++ b/.gitattributes
@@ -2941,6 +2941,7 @@ components/pochecker/pocheckermain.pp svneol=native#text/plain
 components/pochecker/pocheckersettings.pp svneol=native#text/pascal
 components/pochecker/pocheckerxmlconfig.pp svneol=native#text/pascal
 components/pochecker/pofamilies.pp svneol=native#text/plain
+components/pochecker/pofamilylists.pp svneol=native#text/pascal
 components/pochecker/resultdlg.lfm svneol=native#text/plain
 components/pochecker/resultdlg.pp svneol=native#text/plain
 components/pochecker/simplepofiles.pp svneol=native#text/plain
