PoChecker: use a custom made dialog for displying possibly very long list of filenames.
git-svn-id: trunk@46508 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2937,6 +2937,8 @@ components/pochecker/pochecker.pas svneol=native#text/plain
 components/pochecker/pocheckerconsts.pas svneol=native#text/pascal
 components/pochecker/pocheckermain.lfm svneol=native#text/plain
 components/pochecker/pocheckermain.pp svneol=native#text/plain
+components/pochecker/pocheckermemodlg.lfm svneol=native#text/plain
+components/pochecker/pocheckermemodlg.pp svneol=native#text/pascal
 components/pochecker/pocheckersettings.pp svneol=native#text/pascal
 components/pochecker/pocheckerxmlconfig.pp svneol=native#text/pascal
 components/pochecker/pofamilies.pp svneol=native#text/plain
