--- a/examples/imgviewer/imgview.lpi
+++ b/examples/imgviewer/imgview.lpi
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
     <Version Value="9"/>
@@ -31,9 +31,6 @@
               <UseAnsiStrings Value="False"/>
             </SyntaxOptions>
           </Parsing>
-          <Other>
-            <CompilerPath Value="$(CompPath)"/>
-          </Other>
         </CompilerOptions>
       </Item2>
     </BuildModes>
@@ -59,7 +56,6 @@
       <Unit0>
         <Filename Value="imgview.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="imgview"/>
       </Unit0>
       <Unit1>
         <Filename Value="frmmain.pas"/>
@@ -102,8 +98,5 @@
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
 </CONFIG>
