--- a/.gitattributes
+++ b/.gitattributes
@@ -6620,6 +6620,7 @@ lcl/interfaces/cocoa/cocoawsextctrls.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsfactory.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsforms.pp svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsmenus.pas svneol=native#text/plain
+lcl/interfaces/cocoa/cocoawsspin.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsstdctrls.pp svneol=native#text/plain
 lcl/interfaces/cocoa/interfaces.pas svneol=native#text/plain
 lcl/interfaces/cocoa/mackeycodes.inc svneol=native#text/pascal
