--- a/.gitattributes
+++ b/.gitattributes
@@ -5162,6 +5162,7 @@ examples/translation/languages/translation_demo.es.po svneol=native#text/plain
 examples/translation/languages/translation_demo.fr.po svneol=native#text/plain
 examples/translation/languages/translation_demo.he.po svneol=native#text/plain
 examples/translation/languages/translation_demo.hu.po svneol=native#text/plain
+examples/translation/languages/translation_demo.it.po svneol=native#text/plain
 examples/translation/languages/translation_demo.po svneol=native#text/plain
 examples/translation/languages/translation_demo.ru.po svneol=native#text/plain
 examples/translation/localizedforms.lfm svneol=native#text/plain
