--- a/.gitattributes
+++ b/.gitattributes
@@ -2672,6 +2672,7 @@ components/lazutils/examples/DictionaryStringList/main.lfm svneol=native#text/pl
 components/lazutils/examples/DictionaryStringList/main.pas svneol=native#text/plain
 components/lazutils/fileutil.inc svneol=native#text/pascal
 components/lazutils/fileutil.pas svneol=native#text/pascal
+components/lazutils/fpcadds.pas svneol=native#text/pascal
 components/lazutils/fpmake.pp svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.cs.po svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.de.po svneol=native#text/plain
@@ -6223,7 +6224,6 @@ lcl/forms/finddlgunit.lfm svneol=native#text/plain
 lcl/forms/finddlgunit.pas svneol=native#text/plain
 lcl/forms/replacedlgunit.lfm svneol=native#text/plain
 lcl/forms/replacedlgunit.pas svneol=native#text/plain
-lcl/fpcadds.pas svneol=native#text/pascal
 lcl/fpmake.pp svneol=native#text/plain
 lcl/graphics.pp svneol=native#text/pascal
 lcl/graphmath.pp svneol=native#text/pascal
