translations: German: updates from Swen Heinig
git-svn-id: trunk@47041 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2648,6 +2648,7 @@ components/lazthread/languages/reglazthread.hu.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.it.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.ru.po svneol=native#text/plain
+components/lazthread/languages/threadoptionsdialog.de.po svneol=native#text/plain
 components/lazthread/languages/threadoptionsdialog.hu.po svneol=native#text/plain
 components/lazthread/languages/threadoptionsdialog.it.po svneol=native#text/plain
 components/lazthread/languages/threadoptionsdialog.po svneol=native#text/plain
