--- a/.gitattributes
+++ b/.gitattributes
@@ -2729,6 +2729,7 @@ components/lazutils/lazutf16.pas svneol=native#text/pascal
 components/lazutils/lazutf8.pas svneol=native#text/pascal
 components/lazutils/lazutf8classes.pas svneol=native#text/pascal
 components/lazutils/lazutf8sysutils.pas svneol=native#text/pascal
+components/lazutils/lazutilities.pas svneol=native#text/plain
 components/lazutils/lazutils.lpk svneol=native#text/plain
 components/lazutils/lazutils.pas svneol=native#text/pascal
 components/lazutils/lazutilsstrconsts.pas svneol=native#text/pascal
