TAChart: Add new axis property LabelSize and corresponding demo (axisalign).
git-svn-id: trunk@47194 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3562,6 +3562,10 @@ components/tachart/demo/axis/axisdemo.lpi svneol=native#text/plain
 components/tachart/demo/axis/axisdemo.lpr svneol=native#text/pascal
 components/tachart/demo/axis/main.lfm svneol=native#text/plain
 components/tachart/demo/axis/main.pas svneol=native#text/pascal
+components/tachart/demo/axisalign/axisalign.lpi svneol=native#text/plain
+components/tachart/demo/axisalign/axisalign.lpr svneol=native#text/plain
+components/tachart/demo/axisalign/main.lfm svneol=native#text/plain
+components/tachart/demo/axisalign/main.pas svneol=native#text/plain
 components/tachart/demo/axistransf/axistransfdemo.lpi svneol=native#text/plain
 components/tachart/demo/axistransf/axistransfdemo.lpr svneol=native#text/pascal
 components/tachart/demo/axistransf/main.lfm svneol=native#text/plain
