--- a/.gitattributes
+++ b/.gitattributes
@@ -5921,6 +5921,7 @@ images/icons/cheetah.icns -text
 images/icons/cheetah.ico -text
 images/icons/lazarus.icns -text
 images/icons/lazarus.ico -text
+images/icons/lazarus.svg svneol=native#text/plain
 images/icons/lazarus128x128.png -text svneol=unset#image/png
 images/icons/lazarus16x16.png -text svneol=unset#image/png
 images/icons/lazarus256x256.png -text svneol=unset#image/png
