fpmake: Re-generated some fpmake.pp files
git-svn-id: trunk@47240 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -679,6 +679,7 @@ components/chmhelp/packages/help/design/lazhelpchm.sh svneol=native#text/plain
 components/chmhelp/packages/help/design/lazhelpchm.txt svneol=native#text/plain
 components/chmhelp/packages/help/design/tchmhelpdatabase.png -text svneol=unset#image/png
 components/chmhelp/packages/help/design/tlhelpconnector.png -text svneol=unset#image/png
+components/chmhelp/packages/help/fpmake.pp svneol=native#text/plain
 components/chmhelp/packages/help/lazhelpchm.pas svneol=native#text/plain
 components/chmhelp/packages/help/lazhelpchm.res -text
 components/chmhelp/packages/help/lhelpcontrol.pas svneol=native#text/plain
@@ -3208,6 +3209,7 @@ components/rx/tstrholder.xpm -text svneol=native#image/x-xpixmap
 components/sdf/Makefile svneol=native#text/plain
 components/sdf/Makefile.compiled svneol=native#text/plain
 components/sdf/Makefile.fpc svneol=native#text/plain
+components/sdf/fpmake.pp svneol=native#text/plain
 components/sdf/images/registersdf.bat svneol=native#text/x-msdos-program
 components/sdf/images/registersdf.txt svneol=native#text/plain
 components/sdf/images/tfixedformatdataset.png -text svneol=unset#image/png
@@ -3251,6 +3253,7 @@ components/sqldb/design/tsqlquery.png -text svneol=unset#image/png
 components/sqldb/design/tsqlscript.png -text svneol=unset#image/png
 components/sqldb/design/tsqltransaction.png -text svneol=unset#image/png
 components/sqldb/design/tsybaseconnection.png -text svneol=unset#image/png
+components/sqldb/fpmake.pp svneol=native#text/plain
 components/sqldb/languages/registersqldb.cs.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.de.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.es.po svneol=native#text/plain
