fpmake: Re-generated fpmake.pp file
git-svn-id: trunk@47249 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1144,6 +1144,7 @@ components/debuggerintf/dbgintfdebuggerbase.pp svneol=native#text/pascal
 components/debuggerintf/dbgintfmiscclasses.pas svneol=native#text/pascal
 components/debuggerintf/debuggerintf.lpk svneol=native#text/plain
 components/debuggerintf/debuggerintf.pas svneol=native#text/pascal
+components/debuggerintf/fpmake.pp svneol=native#text/plain
 components/editortoolbar/Makefile svneol=native#text/plain
 components/editortoolbar/Makefile.compiled svneol=native#text/plain
 components/editortoolbar/Makefile.fpc svneol=native#text/plain
@@ -2057,6 +2058,7 @@ components/lazdebuggergdbmi/Makefile.compiled svneol=native#text/plain
 components/lazdebuggergdbmi/Makefile.fpc svneol=native#text/plain
 components/lazdebuggergdbmi/cmdlinedebugger.pp svneol=native#text/pascal
 components/lazdebuggergdbmi/debugutils.pp svneol=native#text/pascal
+components/lazdebuggergdbmi/fpmake.pp svneol=native#text/plain
 components/lazdebuggergdbmi/gdbmidebugger.pp svneol=native#text/pascal
 components/lazdebuggergdbmi/gdbmidebuginstructions.pp svneol=native#text/pascal
 components/lazdebuggergdbmi/gdbmimiscclasses.pp svneol=native#text/pascal
