LCL: factored LCLTranslator unit out of DefaultTranslator. LCLTranslator does not call SetDefaultLang in its initialization section, allowing user to do it manually. DefaultTranslator still does it as before, thus keeping previous behaviour for compatibility.
Bug 26631.

git-svn-id: trunk@47310 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7138,6 +7138,7 @@ lcl/lclmessageglue.pas svneol=native#text/pascal
 lcl/lclproc.pas svneol=native#text/pascal
 lcl/lclrescache.pas svneol=native#text/pascal
 lcl/lclstrconsts.pas svneol=native#text/pascal
+lcl/lcltranslator.pas svneol=native#text/pascal
 lcl/lcltype.pp svneol=native#text/pascal
 lcl/lclunicodedata.pas svneol=native#text/pascal
 lcl/lclversion.pas svneol=native#text/pascal
