--- a/.gitattributes
+++ b/.gitattributes
@@ -7259,6 +7259,7 @@ packager/frames/package_usage_options.pas svneol=native#text/pascal
 packager/globallinks/README.txt svneol=native#text/plain
 packager/globallinks/aarrebase-0.lpl svneol=native#text/plain
 packager/globallinks/aggpaslcl-1.lpl svneol=native#text/plain
+packager/globallinks/alienguidsgn-1.lpl svneol=native#text/plain
 packager/globallinks/anchordocking-0.6.lpl svneol=native#text/plain
 packager/globallinks/anchordockingdsgn-0.5.lpl svneol=native#text/plain
 packager/globallinks/appforms-1.lpl svneol=native#text/plain
@@ -7323,8 +7324,8 @@ packager/globallinks/lazutils-1.lpl svneol=native#text/plain
 packager/globallinks/lazvlc-1.lpl svneol=native#text/plain
 packager/globallinks/lazwebextra-0.9.lpl svneol=native#text/plain
 packager/globallinks/lazwiki-1.0.1.lpl svneol=native#text/plain
-packager/globallinks/lcl-1.3.lpl svneol=native#text/plain
-packager/globallinks/lclbase-1.3.lpl svneol=native#text/plain
+packager/globallinks/lcl-1.5.lpl svneol=native#text/plain
+packager/globallinks/lclbase-1.5.lpl svneol=native#text/plain
 packager/globallinks/leakview-1.lpl svneol=native#text/plain
 packager/globallinks/lhelpcontrolpkg-0.2.lpl svneol=native#text/plain
 packager/globallinks/lr_add_function-1.lpl svneol=native#text/plain
