--- a/.gitattributes
+++ b/.gitattributes
@@ -4294,6 +4294,7 @@ docs/xml/lazutils/avglvltree.xml svneol=native#text/plain
 docs/xml/lazutils/dictionarystringlist.xml svneol=native#text/plain
 docs/xml/lazutils/easylazfreetype.xml svneol=native#text/plain
 docs/xml/lazutils/fileutil.xml svneol=native#text/plain
+docs/xml/lazutils/fpcadds.xml svneol=LF#text/xml eol=lf
 docs/xml/lazutils/laz2_dom.xml svneol=native#text/plain
 docs/xml/lazutils/laz2_xmlcfg.xml svneol=native#text/plain
 docs/xml/lazutils/laz2_xmlread.xml svneol=native#text/plain
@@ -4387,7 +4388,6 @@ docs/xml/lcl/extgraphics.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/filectrl.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/forms.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/forms/tapplication_queueasynccall.pas svneol=native#text/plain
-docs/xml/lcl/fpcadds.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/fpmake.xml svneol=native#text/plain
 docs/xml/lcl/graphics.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/graphmath.xml svneol=LF#text/xml eol=lf
