Translations: Hungarian translation update by Péter Gábor, bug #27365
git-svn-id: trunk@47550 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -902,6 +902,7 @@ components/codetools/ide/codyutils.pas svneol=native#text/pascal
 components/codetools/ide/declarevardlg.lfm svneol=native#text/plain
 components/codetools/ide/declarevardlg.pas svneol=native#text/pascal
 components/codetools/ide/languages/codystrconsts.de.po svneol=native#text/plain
+components/codetools/ide/languages/codystrconsts.hu.po svneol=native#text/plain
 components/codetools/ide/languages/codystrconsts.it.po svneol=native#text/plain
 components/codetools/ide/languages/codystrconsts.lt.po svneol=native#text/plain
 components/codetools/ide/languages/codystrconsts.po svneol=native#text/plain
@@ -925,6 +926,7 @@ components/codetools/languages/codetoolsstrconsts.es.po svneol=native#text/plain
 components/codetools/languages/codetoolsstrconsts.fi.po svneol=native#text/plain
 components/codetools/languages/codetoolsstrconsts.fr.po svneol=native#text/plain
 components/codetools/languages/codetoolsstrconsts.he.po svneol=native#text/plain
+components/codetools/languages/codetoolsstrconsts.hu.po svneol=native#text/plain
 components/codetools/languages/codetoolsstrconsts.id.po svneol=native#text/plain
 components/codetools/languages/codetoolsstrconsts.it.po svneol=native#text/plain
 components/codetools/languages/codetoolsstrconsts.lt.po svneol=native#text/plain
@@ -3940,6 +3942,7 @@ components/turbopower_ipro/ipstrms.pas svneol=native#text/pascal
 components/turbopower_ipro/iputils.pas svneol=native#text/pascal
 components/turbopower_ipro/languages/ipconst.de.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.fr.po svneol=native#text/plain
+components/turbopower_ipro/languages/ipconst.hu.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.id.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.it.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.lt.po svneol=native#text/plain
@@ -3948,6 +3951,7 @@ components/turbopower_ipro/languages/ipconst.pt_BR.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.ru.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.zh_CN.po svneol=native#text/plain
+components/turbopower_ipro/languages/iphtmlpv.hu.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.it.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.lt.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.po svneol=native#text/plain
@@ -3955,6 +3959,7 @@ components/turbopower_ipro/languages/iphtmlpv.pt_BR.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.ru.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.de.po svneol=native#text/plain
+components/turbopower_ipro/languages/iputils.hu.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.id.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.it.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.lt.po svneol=native#text/plain
