Debugger: GDB improve internal breakpoints at start. Issue #0026209 #0026470
git-svn-id: trunk@47567 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2092,6 +2092,7 @@ components/lazdebuggergdbmi/test/RunGdbmi.lpr svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/ArgVPrg.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/EnvPrg.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/ExceptPrg.pas svneol=native#text/pascal
+components/lazdebuggergdbmi/test/TestApps/ExceptPrgStep.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/WatchesPrg.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/WatchesPrgArray.inc svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/WatchesPrgEnum.inc svneol=native#text/pascal
@@ -2100,6 +2101,7 @@ components/lazdebuggergdbmi/test/TestApps/WatchesPrgSimple.inc svneol=native#tex
 components/lazdebuggergdbmi/test/TestApps/WatchesPrgString.inc svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/WatchesPrgStruct.inc svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/WatchesPrgVariant.inc svneol=native#text/pascal
+components/lazdebuggergdbmi/test/TestApps/breakprog.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestApps/u1/unitw1.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestGdbmi.lpi svneol=native#text/pascal
 components/lazdebuggergdbmi/test/TestGdbmi.lpr svneol=native#text/pascal
