SynEdit: Multi caret beta
git-svn-id: trunk@47596 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3493,6 +3493,7 @@ components/synedit/synhighlightervb.pas svneol=native#text/plain
 components/synedit/synhighlighterxml.pas svneol=native#text/pascal
 components/synedit/synmacrorecorder.pas svneol=native#text/pascal
 components/synedit/synmemo.pas svneol=native#text/pascal
+components/synedit/synpluginmulticaret.pp svneol=native#text/plain
 components/synedit/synpluginsyncroedit.pp svneol=native#text/pascal
 components/synedit/synpluginsyncronizededitbase.pp svneol=native#text/pascal
 components/synedit/synplugintemplateedit.pp svneol=native#text/pascal
@@ -3513,6 +3514,7 @@ components/synedit/test/testhighlightxml.pas svneol=native#text/pascal
 components/synedit/test/testmarkuphighall.pas svneol=native#text/pascal
 components/synedit/test/testmarkupifdef.pas svneol=native#text/pascal
 components/synedit/test/testmarkupwordgroup.pas svneol=native#text/pascal
+components/synedit/test/testmulticaret.pas svneol=native#text/plain
 components/synedit/test/testnavigation.pas svneol=native#text/pascal
 components/synedit/test/testpaintcolormerging.pas svneol=native#text/pascal
 components/synedit/test/testsearch.pas svneol=native#text/pascal
