--- a/.gitattributes
+++ b/.gitattributes
@@ -2997,6 +2997,9 @@ components/printers/carbon/carbonprinters_h.inc svneol=native#text/pascal
 components/printers/carbon/carbonprinting.pas svneol=native#text/pascal
 components/printers/carbon/carbonprndialogs.inc svneol=native#text/pascal
 components/printers/carbon/issues.xml svneol=native#text/xml
+components/printers/cocoa/cocoaprinters.inc svneol=native#text/plain
+components/printers/cocoa/cocoaprinters_h.inc svneol=native#text/plain
+components/printers/cocoa/cocoaprndialogs.inc svneol=native#text/plain
 components/printers/design/Makefile svneol=native#text/plain
 components/printers/design/Makefile.compiled svneol=native#text/plain
 components/printers/design/Makefile.fpc svneol=native#text/plain
