IDE: started quickfix for local variable not initialized
git-svn-id: trunk@47830 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5660,6 +5660,8 @@ ide/projectwizarddlg.pas svneol=native#text/plain
 ide/publishmodule.pas svneol=native#text/pascal
 ide/publishprojectdlg.lfm svneol=native#text/plain
 ide/publishprojectdlg.pas svneol=native#text/pascal
+ide/qfinitlocalvardlg.lfm svneol=native#text/plain
+ide/qfinitlocalvardlg.pas svneol=native#text/plain
 ide/raw_window.pas svneol=native#text/plain
 ide/redirect_stderr.pas svneol=native#text/plain
 ide/restrictionbrowser.lfm svneol=native#text/plain
