--- a/.gitattributes
+++ b/.gitattributes
@@ -6702,6 +6702,7 @@ lcl/interfaces/cocoa/cocoautils.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawinapi.inc svneol=native#text/pascal
 lcl/interfaces/cocoa/cocoawinapih.inc svneol=native#text/pascal
 lcl/interfaces/cocoa/cocoawsbuttons.pp svneol=native#text/pascal
+lcl/interfaces/cocoa/cocoawschecklst.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawscomctrls.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawscommon.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsdialogs.pp svneol=native#text/pascal
