--- a/.gitattributes
+++ b/.gitattributes
@@ -6209,6 +6209,7 @@ install/man/man1/svn2revisioninc.1 svneol=native#text/plain
 install/man/man1/updatepofiles.1 svneol=native#text/plain
 languages/README.txt svneol=native#text/plain
 languages/debuggerstrconst.es.po svneol=native#text/plain
+languages/debuggerstrconst.fr.po svneol=native#text/plain
 languages/debuggerstrconst.hu.po svneol=native#text/plain
 languages/debuggerstrconst.it.po svneol=native#text/plain
 languages/debuggerstrconst.lt.po svneol=native#text/plain
