New files for IDE toolbar options from Balázs Székely. Issue #27603.
git-svn-id: trunk@48245 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5553,6 +5553,8 @@ ide/frames/project_save_options.lfm svneol=native#text/plain
 ide/frames/project_save_options.pas svneol=native#text/plain
 ide/frames/project_versioninfo_options.lfm svneol=native#text/plain
 ide/frames/project_versioninfo_options.pas svneol=native#text/plain
+ide/frames/toolbar_options.lfm svneol=native#text/plain
+ide/frames/toolbar_options.pas svneol=native#text/pascal
 ide/frames/window_options.lfm svneol=native#text/plain
 ide/frames/window_options.pas svneol=native#text/pascal
 ide/frmcustomapplicationoptions.lfm svneol=native#text/plain
