--- a/.gitattributes
+++ b/.gitattributes
@@ -5904,6 +5904,7 @@ images/components/txmlpropstorage.png -text svneol=unset#image/png
 images/components/unregisteredcomponent.png -text svneol=unset#image/png
 images/components_images.bat svneol=native#text/x-msdos-program
 images/components_images.res -text
+images/components_images.sh svneol=native#text/plain
 images/components_images_list.txt svneol=native#text/plain
 images/componenttreeview.bat svneol=native#text/x-msdos-program
 images/componenttreeview.res -text
