--- a/.gitattributes
+++ b/.gitattributes
@@ -3702,6 +3702,10 @@ components/tachart/demo/opengl/Main.lfm svneol=native#text/plain
 components/tachart/demo/opengl/Main.pas svneol=native#text/pascal
 components/tachart/demo/opengl/opengldemo.lpi svneol=native#text/plain
 components/tachart/demo/opengl/opengldemo.lpr svneol=native#text/pascal
+components/tachart/demo/panes-2/project1.lpi svneol=native#text/pascal
+components/tachart/demo/panes-2/project1.lpr svneol=native#text/pascal
+components/tachart/demo/panes-2/unit1.lfm svneol=native#text/pascal
+components/tachart/demo/panes-2/unit1.pas svneol=native#text/pascal
 components/tachart/demo/panes/Main.lfm svneol=native#text/plain
 components/tachart/demo/panes/Main.pas svneol=native#text/pascal
 components/tachart/demo/panes/panes.lpi svneol=native#text/plain
