--- a/.gitattributes
+++ b/.gitattributes
@@ -5712,6 +5712,9 @@ ide/syncolorattribeditor.lfm svneol=native#text/pascal
 ide/syncolorattribeditor.pas svneol=native#text/pascal
 ide/sysvaruseroverridedlg.lfm svneol=native#text/plain
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
+ide/toolbarconfig.lfm svneol=native#text/plain
+ide/toolbarconfig.pas svneol=native#text/pascal
+ide/toolbardata.pas svneol=native#text/pascal
 ide/transfermacros.pp svneol=native#text/pascal
 ide/unitdependencies.lfm svneol=native#text/plain
 ide/unitdependencies.pas svneol=native#text/pascal
