--- a/.gitattributes
+++ b/.gitattributes
@@ -963,6 +963,7 @@ components/codetools/resourcecodetool.pas svneol=native#text/pascal
 components/codetools/sourcechanger.pas svneol=native#text/pascal
 components/codetools/sourcelog.pas svneol=native#text/pascal
 components/codetools/stdcodetools.pas svneol=native#text/pascal
+components/codetools/tests/fdt_basic.pas svneol=native#text/plain
 components/codetools/tests/fdt_classhelper.pas svneol=native#text/plain
 components/codetools/tests/fdt_nestedclasses.pas svneol=native#text/plain
 components/codetools/tests/fdtbase.pas svneol=native#text/plain
@@ -971,6 +972,8 @@ components/codetools/tests/finddeclarationtest.lpr svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
+components/codetools/tests/pt_thlp1.pas svneol=native#text/plain
+components/codetools/tests/pt_thlp2.pas svneol=native#text/plain
 components/codetools/unitdictionary.pas svneol=native#text/plain
 components/compilers/c/examples/test.c svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.de.po svneol=native#text/plain
