PascalScript: Use the new PNG icons in resource file.
git-svn-id: trunk@48731 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -200,7 +200,7 @@ components/PascalScript/Source/arm.inc svneol=native#text/pascal
 components/PascalScript/Source/changelog.txt svneol=native#text/pascal
 components/PascalScript/Source/eDefines.inc svneol=native#text/pascal
 components/PascalScript/Source/pascalscript.lpk svneol=native#text/pascal
-components/PascalScript/Source/pascalscript.lrs svneol=native#text/pascal
+components/PascalScript/Source/pascalscript.lrs -text svneol=native#text/pascal
 components/PascalScript/Source/pascalscript.pas svneol=native#text/pascal
 components/PascalScript/Source/pascalscriptfcl.lpk svneol=native#text/pascal
 components/PascalScript/Source/powerpc.inc svneol=native#text/pascal
