--- a/.gitattributes
+++ b/.gitattributes
@@ -675,6 +675,7 @@ components/chmhelp/lhelp/images/table_close.png -text
 components/chmhelp/lhelp/images/table_item.png -text
 components/chmhelp/lhelp/images/table_open.png -text
 components/chmhelp/lhelp/languages/lhelp.fi.po svneol=native#text/plain
+components/chmhelp/lhelp/languages/lhelp.fr.po svneol=native#text/plain
 components/chmhelp/lhelp/languages/lhelp.hu.po svneol=native#text/plain
 components/chmhelp/lhelp/languages/lhelp.po svneol=native#text/plain
 components/chmhelp/lhelp/languages/lhelp.ru.po svneol=native#text/plain
@@ -3393,6 +3394,7 @@ components/synedit/languages/README.txt svneol=native#text/plain
 components/synedit/languages/syndesignstringconstants.cs.po svneol=native#text/plain
 components/synedit/languages/syndesignstringconstants.de.po svneol=native#text/plain
 components/synedit/languages/syndesignstringconstants.es.po svneol=native#text/plain
+components/synedit/languages/syndesignstringconstants.fr.po svneol=native#text/plain
 components/synedit/languages/syndesignstringconstants.he.po svneol=native#text/plain
 components/synedit/languages/syndesignstringconstants.hu.po svneol=native#text/plain
 components/synedit/languages/syndesignstringconstants.it.po svneol=native#text/plain
@@ -3422,6 +3424,7 @@ components/synedit/languages/syneditstrconst.zh_CN.po svneol=native#text/plain
 components/synedit/languages/synhighlighterunixshellscript.cs.po svneol=native#text/plain
 components/synedit/languages/synhighlighterunixshellscript.de.po svneol=native#text/plain
 components/synedit/languages/synhighlighterunixshellscript.es.po svneol=native#text/plain
+components/synedit/languages/synhighlighterunixshellscript.fr.po svneol=native#text/plain
 components/synedit/languages/synhighlighterunixshellscript.he.po svneol=native#text/plain
 components/synedit/languages/synhighlighterunixshellscript.hu.po svneol=native#text/plain
 components/synedit/languages/synhighlighterunixshellscript.id.po svneol=native#text/plain
