--- a/.gitattributes
+++ b/.gitattributes
@@ -991,6 +991,7 @@ components/codetools/tests/pt_thlp2.pas svneol=native#text/plain
 components/codetools/unitdictionary.pas svneol=native#text/plain
 components/compilers/c/examples/test.c svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.de.po svneol=native#text/plain
+components/compilers/c/languages/lazcstrconsts.fr.po svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.hu.po svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.it.po svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.po svneol=native#text/plain
@@ -2990,6 +2991,7 @@ components/pochecker/graphstat.pp svneol=native#text/pascal
 components/pochecker/languages/pocheckerconsts.cs.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.de.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.es.po svneol=native#text/plain
+components/pochecker/languages/pocheckerconsts.fr.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.hu.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.it.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.ja.po svneol=native#text/plain
